--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Rostro</title>
+	<title>Portrait</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -34,6 +34,10 @@
 		<div class="mechon cuatro"></div>
 		<div class="mechon cinco"></div>
 		<div class="barra"></div>
+		<div class="oreja"></div>
+		<div class="oreja dos"></div>
+		<div class="oreja lobulo"></div>
+		<div class="aro"></div>
 	</div>
 </body>
 </html>
